Introduce QueryExecutionContext to manage query life cycle